--- a/PlaneBuilder/Views/Account/ForgotPassword.cshtml
+++ b/PlaneBuilder/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlaneBuilder.AccountViewModels.ForgotPasswordViewModel
+﻿@model PlaneBuilder.Models.AccountViewModels.ForgotPasswordViewModel
 @{
     ViewData["Title"] = "Forgot your password?";
 }
