--- a/PlaneBuilder/Views/Account/SendCode.cshtml
+++ b/PlaneBuilder/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlaneBuilder.AccountViewModels.SendCodeViewModel
+﻿@model PlaneBuilder.Models.AccountViewModels.SendCodeViewModel
 @{
     ViewData["Title"] = "Send Verification Code";
 }
