--- a/PlaneBuilder/Views/Account/VerifyCode.cshtml
+++ b/PlaneBuilder/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlaneBuilder.AccountViewModels.VerifyCodeViewModel
+﻿@model PlaneBuilder.Models.AccountViewModels.VerifyCodeViewModel
 @{
     ViewData["Title"] = "Verify";
 }
