--- a/PlaneBuilder/Views/Manage/AddPhoneNumber.cshtml
+++ b/PlaneBuilder/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlaneBuilder.ManageViewModels.AddPhoneNumberViewModel
+﻿@model PlaneBuilder.Models.ManageViewModel.AddPhoneNumberViewModel
 @{
     ViewData["Title"] = "Add Phone Number";
 }
