--- a/PlaneBuilder/Views/Manage/AddRole.cshtml
+++ b/PlaneBuilder/Views/Manage/AddRole.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlaneBuilder.ManageViewModels.AddRoleViewModel
+﻿@model PlaneBuilder.Models.ManageViewModel.AddRoleViewModel
 @{
     ViewData["Title"] = "Add Role";
 }
