--- a/PlaneBuilder/Views/Manage/ChangePassword.cshtml
+++ b/PlaneBuilder/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlaneBuilder.ManageViewModels.ChangePasswordViewModel
+﻿@model PlaneBuilder.Models.ManageViewModel.ChangePasswordViewModel
 @{
     ViewData["Title"] = "Change Password";
 }
