--- a/PlaneBuilder/Views/Manage/Index.cshtml
+++ b/PlaneBuilder/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlaneBuilder.ManageViewModels.IndexViewModel
+﻿@model PlaneBuilder.Models.ManageViewModel.IndexViewModel
 @{
     ViewData["Title"] = "Manage your account";
 }
