--- a/PlaneBuilder/Views/Manage/ManageLogins.cshtml
+++ b/PlaneBuilder/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlaneBuilder.ManageViewModels.ManageLoginsViewModel
+﻿@model PlaneBuilder.Models.ManageViewModel.ManageLoginsViewModel
 @{
     ViewData["Title"] = "Manage your external logins";
 }
