--- a/PlaneBuilder/Views/Manage/SetPassword.cshtml
+++ b/PlaneBuilder/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlaneBuilder.ManageViewModels.SetPasswordViewModel
+﻿@model PlaneBuilder.Models.ManageViewModel.SetPasswordViewModel
 @{
     ViewData["Title"] = "Set Password";
 }
