--- a/PlaneBuilder/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/PlaneBuilder/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlaneBuilder.ManageViewModels.VerifyPhoneNumberViewModel
+﻿@model PlaneBuilder.Models.ManageViewModel.VerifyPhoneNumberViewModel
 @{
     ViewData["Title"] = "Verify Phone Number";
 }
