--- a/PlaneBuilder/Views/Account/Login.cshtml
+++ b/PlaneBuilder/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 
-@model PlaneBuilder.AccountViewModels.LoginViewModel
+@model PlaneBuilder.Models.AccountViewModels.LoginViewModel
 @inject IAuthenticationSchemeProvider SchemeProvider
 
 @{
