CRUD functions working

--- a/PlaneBuilder/Views/Home/AddPlane.cshtml
+++ b/PlaneBuilder/Views/Home/AddPlane.cshtml
@@ -28,11 +28,11 @@
         <input asp-for="Have_Ridden" />
 
         <input asp-for="Does_Exist" type="hidden" />
-        <input asp-for="iatacode" type="hidden" />
+        <input asp-for="Iata_Code" type="hidden" />
         <input asp-for="Plane_Status" type="hidden" />
         <input asp-for="EmailAddress" type="hidden" />
         
-        <input type="submit" value="Add Purse!" />
+        <input type="submit" value="Add Plane!" />
     </div>
 
 </form>
