--- a/PlaneBuilder/Views/Home/FindAPlane.cshtml
+++ b/PlaneBuilder/Views/Home/FindAPlane.cshtml
@@ -1,22 +1,30 @@
-﻿@model Departure
-
-@if (Model.estimated != null)
+﻿@model APISimpleResponse
 {
-    string hourMin = (Model.estimated).ToString();
-    var timeString = hourMin.Substring(11, 15);
-    var time = DateTime.Parse(hourMin).ToString("h:mm tt");
-    <h2>
-        Good news! A flight meeting your specifications will be leaving @Model.iata airport at @time! Would you like to find out how long it would take to catch the flight?
-    </h2>
-    <h4>
-        <a asp-action="Planes"
-           asp-controller="Home">
-            No, take me back to my planes
-        </a>
-    </h4>
- }
- else
- {
+@if (Model != null)
+{
+    @foreach (Departure cool in Model.Departures)
+    {
+        <h2>We have found the following fligts that match your specifications!</h2>
+        string hourMin = (cool.estimated).ToString();
+        var timeString = hourMin.Substring(11, 15);
+        var time = DateTime.Parse(hourMin).ToString("h:mm tt");
+        <h2>
+            @cool.iata airport at @time
+        </h2>
+        <h4>
+            <a asp-action="Planes"
+               asp-controller="Home">
+                None of these interest me, take me back.
+            </a>
+        </h4>
+    }
+
+}
+else
+{
     <h2>Sorry, it looks like there are no current flights meeting your specifications.</h2>
- }
+}
+}
+
+
 
