--- a/PlaneBuilder/Views/Shared/_LoginPartial.cshtml
+++ b/PlaneBuilder/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            <a class="nav-link text-dark" asp-controller="Manage" asp-action="Planes" title="Manage">Hello @UserManager.GetUserName(User)!</a>
         </li>
         <li class="nav-item">
             <form asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm">
