--- a/PlaneBuilder/wwwroot/css/site.css
+++ b/PlaneBuilder/wwwroot/css/site.css
@@ -60,6 +60,7 @@ html {
 
 body {
   /* Margin bottom by footer height */
+  background-size: cover;
   margin-bottom: 60px;
 }
 .footer {
@@ -69,3 +70,4 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
