--- a/PlaneBuilder/Views/Home/UpdatePlane.cshtml
+++ b/PlaneBuilder/Views/Home/UpdatePlane.cshtml
@@ -1,53 +1,60 @@
 ﻿@model UpdatePlaneViewModel
 
-<h1>Change the name of @Model.OldName</h1>
-<form asp-action="UpdatePlane" asp-controller="Home">
+    <body background="https://cdn.hipwallpaper.com/i/17/77/notARY.jpg">
+    </body>
 
-    <div>
-        <label asp-for="NewName"></label>
-        <input asp-for="NewName" />
+    <div class="jumbotron">
+        <h1>Change the name of @Model.OldName</h1>
+        <form asp-action="UpdatePlane" asp-controller="Home">
+
+            <div>
+                <label asp-for="NewName"></label>
+                <input asp-for="NewName" />
+            </div>
+
+            <div>
+                <label asp-for="NewEngine_Count"></label>
+                <input asp-for="NewEngine_Count" />
+            </div>
+
+            <div>
+                <label asp-for="NewDescription"></label>
+                <input asp-for="NewDescription" />
+            </div>
+
+            <div>
+                <label asp-for="NewEngine_Type"></label>
+                <input asp-for="NewEngine_Type" />
+            </div>
+
+            <div>
+                <label asp-for="NewAge"></label>
+                <input asp-for="NewAge" />
+            </div>
+
+            <div>
+                <label asp-for="NewRating"></label>
+                <input asp-for="NewRating" />
+            </div>
+
+            <div>
+                <label asp-for="NewHave_Ridden"></label>
+                <input asp-for="NewHave_Ridden" />
+            </div>
+
+            <div>
+                <label asp-for="NewPicture"></label>
+                <input asp-for="NewPicture" />
+            </div>
+
+
+
+            <input asp-for="PlaneID" type="hidden" />
+
+
+            <button type="submit" class="btn btn-primary">Update Plane</button>
+
+        </form>
+        <a class="btn btn-primary btn-lg" href="https://localhost:5001/" role="button">Take me back</a>
     </div>
 
-    <div>
-        <label asp-for="NewEngine_Count"></label>
-        <input asp-for="NewEngine_Count" />
-    </div>
-
-    <div>
-        <label asp-for="NewDescription"></label>
-        <input asp-for="NewDescription" />
-    </div>
-
-    <div>
-        <label asp-for="NewEngine_Type"></label>
-        <input asp-for="NewEngine_Type" />
-    </div>
-
-    <div>
-        <label asp-for="NewAge"></label>
-        <input asp-for="NewAge" />
-    </div>
-
-    <div>
-        <label asp-for="NewRating"></label>
-        <input asp-for="NewRating" />
-    </div>
-
-    <div>
-        <label asp-for="NewHave_Ridden"></label>
-        <input asp-for="NewHave_Ridden" />
-    </div>
-
-    <div>
-        <label asp-for="NewPicture"></label>
-        <input asp-for="NewPicture" />
-    </div>
-
-
-
-    <input asp-for="PlaneID" type="hidden" />
-    
-
-    <button type="submit" class="btn btn-primary">Update Plane</button>
-
-</form>
