--- a/PlaneBuilder/wwwroot/css/site.css
+++ b/PlaneBuilder/wwwroot/css/site.css
@@ -59,8 +59,9 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    background-size: cover;
+    margin-bottom: 60px;
 }
 .footer {
   position: absolute;
